--- a/heroku.yml
+++ b/heroku.yml
@@ -1,4 +1,5 @@
 build:
   docker:
     web: Dockerfile
-run: sh -c "python manage.py runserver 0.0.0.0:8000"
+run: 
+  web: sh -c "python manage.py runserver 0.0.0.0:8000"
