fix error in default.conf

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -6,7 +6,7 @@ server {
     }
 
     location / {
-        uwsgi_pass https://netmanga.herokuapp.com;
+        uwsgi_pass netmanga.herokuapp.com;
         include /etc/nginx/uwsgi_params;
     }
 }
