--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -6,7 +6,7 @@ server {
     }
 
     location / {
-        uwsgi_pass netmanga.herokuapp.com;
+        uwsgi_pass netmanga.herokuapp.com:8000;
         include /etc/nginx/uwsgi_params;
     }
 }
