Listen to $PORT in default.conf

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,12 +1,12 @@
 server {
-    listen 8080;
+    listen $PORT;
 
     location /static {
         alias /vol/static;
     }
 
     location / {
-        uwsgi_pass netmanga.herokuapp.com:$PORT;
+        uwsgi_pass netmanga.herokuapp.com:8000;
         include /etc/nginx/uwsgi_params;
     }
 }
