--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen $PORT default_server;
+    listen process.env.PORT default_server;
 
     location /static {
         alias /vol/static;
