--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -10,4 +10,4 @@ RUN chmod 755 /vol/static
 
 USER nginx
 
-CMD sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;"
+CMD -c "envsubst '\$PORT' < /etc/nginx/conf.d/default.conf > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;"
