--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -6,7 +6,7 @@ server {
     }
 
     location / {
-        uwsgi_pass netmanga.herokuapp.com:$PORT;
+        uwsgi_pass netmanga.com:$PORT;
         uwsgi_buffer_size 32k;
         uwsgi_buffers 8 32k;
         
