--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -6,7 +6,10 @@ server {
     }
 
     location / {
+        uwsgi_set_header HOST $host;
         uwsgi_pass netmanga.com:$PORT;
+        uwsgi_set_header X-Forwarded-HOST $server_name;
+        uwsgi_set_header X-REAL_IP $remote_addr;
         uwsgi_buffer_size 32k;
         uwsgi_buffers 8 32k;
         
