--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -6,12 +6,17 @@ server {
     }
 
     location / {
-        
+        include /etc/nginx/uwsgi_params;
         uwsgi_pass netmanga.herokuapp.com:$PORT;
+
+        uwsgi_param Host $host;
+        uwsgi_param X-Real-IP $remote_addr;
+        uwsgi_param X-Forwarded-For $proxy_add_x_forwarded_for;
+        uwsgi_param X-Forwarded-Proto $http_x_forwarded_proto;
+
         uwsgi_buffer_size 32k;
         uwsgi_buffers 8 32k;
         
-        include /etc/nginx/uwsgi_params;
         uwsgi_read_timeout 300;
         proxy_read_timeout 300;
     }
