--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -7,7 +7,7 @@ server {
 
     location / {
         include /etc/nginx/uwsgi_params;
-        uwsgi_pass netmanga.herokuapp.com:8000;
+        uwsgi_pass netmanga.herokuapp.com:$PORT;
 
         uwsgi_param Host $host;
         uwsgi_param X-Real-IP $remote_addr;
