--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -6,8 +6,8 @@ server {
     }
 
     location / {
+        uwsgi_pass unix:///tmp/uwsgi.sock;
         include /etc/nginx/uwsgi_params;
-        uwsgi_pass netmanga.herokuapp.com:$PORT;
 
         uwsgi_param Host $host;
         uwsgi_param X-Real-IP $remote_addr;
