--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -1,12 +1,12 @@
 server {
-    listen $PORT default_server;
+    listen 8080 default_server;
 
     location /static {
         alias /vol/static;
     }
 
     location / {
-        uwsgi_pass unix:///tmp/uwsgi.sock;
+        uwsgi_pass netmanga.herokuapp.com:$PORT;
         include /etc/nginx/uwsgi_params;
 
         uwsgi_param Host $host;
