--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -13,5 +13,9 @@ server {
         uwsgi_pass netmanga.herokuapp.com:$PORT;
         include /etc/nginx/uwsgi_params;
 
+        uwsgi_buffer_size 32k;
+        uwsgi_buffers 8 32k;
+        
+        uwsgi_read_timeout 300;
     }
 }
