--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -1,5 +1,8 @@
-http {
+server {
     listen $PORT default_server;
+    uwsgi_read_timeout 300;
+    uwsgi_connect_timeout 300;
+    uwsgi_read_timeout 300;
 
     location /static {
         alias /vol/static;
@@ -10,8 +13,11 @@ http {
     }
 
     location / {
-        proxy_pass netmanga.herokuapp.com:$PORT;
+        uwsgi_pass netmanga.herokuapp.com:$PORT;
         include /etc/nginx/uwsgi_params;
+
+        uwsgi_buffer_size 32k;
+        uwsgi_buffers 8 32k;
         
     }
 }
