--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -1,23 +1,16 @@
-server {
-    listen $PORT default_server;
-    uwsgi_read_timeout 300;
-    uwsgi_connect_timeout 300;
-    uwsgi_send_timeout 300;
-
-    location /static {
-        alias /vol/static;
+http{
+    upstream netmanga {
+        server netmanga.herokuapp.com;
     }
 
-    location /logs {
-        error_log /var/log/nginx/logs.error.log debug;
+    server {
+        location /static {
+            alias /vol/static;
+        }
     }
 
     location / {
-        uwsgi_pass netmanga.herokuapp.com:$PORT;
+        uwsgi_pass http://netmanga;
         include /etc/nginx/uwsgi_params;
-
-        uwsgi_buffer_size 32k;
-        uwsgi_buffers 8 32k;
-        
     }
 }
