new nginx configuration

--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -4,12 +4,16 @@ http{
     }
 
     server {
+        listen $PORT;
         location /static {
             alias /vol/static;
         }
 
         location / {
             proxy_pass https://netmanga;
+            proxy_set_header x-forwarded-host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header Host netmanga.herokuapp.com:
         }
     }
 
