--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -13,7 +13,7 @@ http{
             proxy_pass https://netmanga;
             proxy_set_header x-forwarded-host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header Host netmanga.herokuapp.com:
+            proxy_set_header Host netmanga.herokuapp.com;
         }
     }
 
