new nginx configuration

--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -10,10 +10,9 @@ http{
         }
 
         location / {
-            proxy_pass https://netmanga;
-            proxy_set_header x-forwarded-host $host;
+            proxy_set_header HOST $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header Host netmanga.herokuapp.com;
+            proxy_pass https://netmanga;
         }
     }
 
