--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -1,51 +1,20 @@
-daemon off;
-# Heroku dynos habe at least 4 cores.
-worker_processes <%= ENV['NGINX_WORKERS'] || 4 %>;
-
-events {
-    use epoll;
-    accept_mutex on;
-    worker_connections <%= ENV['NGINX_WORKER_CONNECTIONS'] || 1024 %>;
-}
-
-http {
-    gzip on;
-    gzip_comp_level 2;
-    gzip_min_length 512;
-    gzip_proxied any; # Heroku router sends Via header
-
-    server_tookens off;
-
-    log_format l2met 'measure'nginx.service=$request_time request_id=$http_request_id';
-    access_log <%= ENV['NGINX_ACCESS_LOG_PATH'] || 'logs/nginx/access.log' %> l2met;
-    error_log <%= ENV['NGINX_ERROR_LOG_PATH'] || 'logs/nginx/error.log' %>;
-
-    include mime.types;
-    default_type application/octet-stream;
-    sendfile on;
-
-    # Must read the body in 5 seonds.
-    client_body_timeout 5;
-
+http{
     upstream netmanga {
-        server unix:/tmp/nginx.socket fail_timeout=0;
+        server netmanga.herokuapp.com;
     }
 
     server {
-        listem <%= ENV["PORT"] %>;
-        server_name _;
-        keepalive_timeout 5;
+        listen $PORT;
+        location /static {
+            alias /vol/static;
+        }
 
         location / {
-            # Uncomment this if statment to force SSL/redirect http -> https
-            # if ($http_x_forwarded_proto != "https") {
-            #     retuurn 301 https://$host$request_uri;
-            # }
-
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $http_host;
-            proxy_redirect off;
-            proxy_pass http://netmanga;
+            proxy_set_header HOST $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_pass https://netmanga;
         }
     }
+
+    
 }
