--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -10,9 +10,10 @@ http{
         }
 
         location / {
-            proxy_set_header HOST $host;
+            proxy_set_header HOST $http_host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_pass https://netmanga;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass http://netmanga;
         }
     }
 
