--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -7,14 +7,14 @@ events {
     worker_connections 1024;
 }
 
-http{
+http {
     gzip on;
     gzip_comp_level 2;
     gzip_min_length 512;
 
     server_tokens off;
 
-    log_format l2met 'measure'nginx.service=$request_time request_id=$http_x_request_id';
+    log_format l2met 'measure#nginx.service=$request_time request_id=$http_x_request_id';
     access_log logs/nginx/access.log l2met;
     error_log logs/nginx/error.log;
 
@@ -26,8 +26,8 @@ http{
     client_body_timeout 5;
 
     server {
-        listen $PORT;
-        server_name _;
+        listen <%= ENV["PORT"] %>;
+        server_name netmanga.heroukapp.com;
         keepalive_timeout 5;
 
         location /static {
