--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -26,7 +26,7 @@ http {
     client_body_timeout 5;
 
     server {
-        listen <%= ENV["PORT"] %>;
+        listen $PORT;
         server_name netmanga.heroukapp.com;
         keepalive_timeout 5;
 
