--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -1,5 +1,5 @@
 server {
-    listen 80;
+    listen $PORT;
     server_name netmanga.heroukapp.com;
     keepalive_timeout 5;
 
@@ -14,7 +14,7 @@ server {
         #proxy_set_header HOST $http_host;
         #proxy_set_header X-Real-IP $remote_addr;
         #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://netmanga.com/;
+        uwsgi_pass http://netmanga.com/;
     }
 }
 
