--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,9 @@
 [uwsgi]
-http-socket = :$(PORT)
+socket = :$(PORT)
 master = true
 processes = 4
+enable-threads = true
+thunder-lock = true
 die-on-term = true
 module = netmanga_website.wsgi
 memory-port = true
