--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -5,5 +5,7 @@ processes = 4
 enable-threads = true
 thunder-lock = true
 die-on-term = true
-module = netmanga_website.wsgi
+chdir = /netmanga_website/
+wsgi-file = netmanga_website/wsgi.py
 memory-port = true
+buffer-size = 32786
