--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -5,7 +5,10 @@ processes = 4
 enable-threads = true
 thunder-lock = true
 die-on-term = true
-chdir = /netmanga_website/
-wsgi-file = netmanga_website/wsgi.py
+module = netmanga_website.py
 memory-port = true
-buffer-size = 32786
+harakiri = 20
+harakiri-verbose
+reload-mercy = 8
+max-requests = 2000
+single-interpreter = true
