--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -5,10 +5,11 @@ processes = 4
 enable-threads = true
 thunder-lock = true
 die-on-term = true
-module = netmanga_website.py
 memory-port = true
 harakiri = 20
 harakiri-verbose
 reload-mercy = 8
 max-requests = 2000
 single-interpreter = true
+chdir = /netmanga_website/
+wsgi-file = netmanga_website/wsgi.py
