--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -11,9 +11,9 @@ server {
         #include uwsgi_params;
         #more_set_headers 'X-Request-Id: $http_x_request_id';
         #uwsgi_pass unix:/tmp/uwsgi.socket;
-        proxy_set_header HOST $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header HOST $host;
+        #proxy_set_header X-Real-IP $remote_addr;
+        #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_pass http://netmanga.com/;
     }
 }
