--- a/proxy/default.conf.template
+++ b/proxy/default.conf.template
@@ -15,7 +15,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-        proxy_pass http://netmanga.com/;
+        proxy_pass http://0.0.0.0:$PORT/;
     }
 }
 
