--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,21 +1,19 @@
 server {
     listen 8080;
-    server_name netmanga.heroukapp.com;
-    keepalive_timeout 5;
 
     location /static {
         alias /vol/static;
     }
 
     location / {
-        #include uwsgi_params;
         #more_set_headers 'X-Request-Id: $http_x_request_id';
-        #uwsgi_pass unix:/tmp/uwsgi.socket;
+        uwsgi_pass  website:8000;
+        include /etc/nginx/uwsgi_params;
         #proxy_set_header HOST $host;
         #proxy_set_header X-Real-IP $remote_addr;
         #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         #proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-        proxy_pass http://0.0.0.0:$8080/;
+        #proxy_pass http://0.0.0.0:$8080/;
     }
 }
 
