--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,15 +1,5 @@
 [uwsgi]
-http-socket = :$(PORT)
+socket = :8000
 master = true
-processes = 4
 enable-threads = true
-thunder-lock = true
-die-on-term = true
-memory-port = true
-harakiri = 20
-harakiri-verbose
-reload-mercy = 8
-max-requests = 2000
-single-interpreter = true
-chdir = /netmanga_website/
-wsgi-file = netmanga_website/wsgi.py
+module = netmanga_website.wsgi
