--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -8,7 +8,10 @@ USER root
 
 RUN mkdir -p /vol/static
 RUN chmod 755 /vol/static
+RUN touch /etc/nginx/conf.d/default.conf
+RUN chown nginx:nginx /etc/nginx/conf.d/default.conf
+RUN +x /run.sh
 
 USER nginx
 
-#CMD /bin/sh -c "envsubst '\$PORT' < /etc/nginx/conf.d/default.conf > /etc/nginx/conf.d/default.conf" && exec nginx -g 'daemon off;'
+CMD ["/run.sh"]
