--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -7,7 +7,7 @@ server {
 
     location / {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
-        uwsgi_pass  website:8000;
+        uwsgi_pass  website:$PORT;
         include /etc/nginx/uwsgi_params;
         #proxy_set_header HOST $host;
         #proxy_set_header X-Real-IP $remote_addr;
