--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen ${PORT};
+    listen $PORT default_server;
 
     location /static {
         alias /vol/static;
@@ -7,7 +7,7 @@ server {
 
     location / {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
-        uwsgi_pass  website:$PORT;
+        uwsgi_pass  web:$PORT;
         include /etc/nginx/uwsgi_params;
         #proxy_set_header HOST $host;
         #proxy_set_header X-Real-IP $remote_addr;
