set timeout for nginx and uwsgi

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -7,6 +7,8 @@ server {
 
     location / {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
+        uwsgi_read_timeout 120s;
+        uwsgi_send_timeout 120s;
         uwsgi_pass  netmanga.herokuapp.com:$PORT;
         include /etc/nginx/uwsgi_params;
         #proxy_set_header HOST $host;
