byte buffer size increase

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,6 +1,7 @@
 [uwsgi]
 socket = :$(PORT)
 master = true
+protocol = uwsgi
 enable-threads = true
 module = netmanga_website.wsgi
 buffer-size=32768
