byte buffer size increase

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -9,6 +9,7 @@ server {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
         uwsgi_read_timeout 120s;
         uwsgi_send_timeout 120s;
+        uwsgi_request_buffering off;
         uwsgi_pass  netmanga.herokuapp.com:$PORT;
         include /etc/nginx/uwsgi_params;
         #proxy_set_header HOST $host;
