uwsgi_request_buffering off;

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -5,4 +5,5 @@ protocol = uwsgi
 enable-threads = true
 module = netmanga_website.wsgi
 buffer-size=32768
-harakiri = 120
+harakiri = 30
+harakiri-verbose = true
