--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -7,9 +7,9 @@ server {
 
     location / {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
-        uwsgi_read_timeout 120s;
-        uwsgi_send_timeout 120s;
-        uwsgi_request_buffering on;
+        uwsgi_request_buffering off;
+        uwsgi_read_timeout 30s;
+        uwsgi_send_timeout 30s;
         uwsgi_pass  netmanga.herokuapp.com:$PORT;
         include /etc/nginx/uwsgi_params;
         #proxy_set_header HOST $host;
