uwsgi_request_buffering off;

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -5,5 +5,4 @@ protocol = uwsgi
 enable-threads = true
 module = netmanga_website.wsgi
 buffer-size=32768
-harakiri = 30
-harakiri-verbose = true
+socket-timeout = 30
