--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -4,4 +4,5 @@ master = true
 protocol = uwsgi
 enable-threads = true
 module = netmanga_website.wsgi
-buffer-size=32768
+buffer-size = 32768
+preload = true
