change to http socket

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,5 +1,6 @@
 server {
     listen $PORT default_server;
+    server_name netmanga.com www.netmanga.com;
 
     location /static {
         alias /vol/static;
@@ -7,14 +8,14 @@ server {
 
     location / {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
-        uwsgi_request_buffering off;
-        uwsgi_read_timeout 60s;
-        uwsgi_send_timeout 60s;
-        uwsgi_pass  netmanga.herokuapp.com:$PORT;
-        include /etc/nginx/uwsgi_params;
-        #proxy_set_header HOST $host;
-        #proxy_set_header X-Real-IP $remote_addr;
-        #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_request_buffering off;
+        proxy_read_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_pass  http://www.netmanga.com:$PORT;
+        #include /etc/nginx/uwsgi_params;
+        proxy_set_header HOST $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         #proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
         #proxy_pass http://0.0.0.0:$8080/;
     }
