change to http socket

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -11,7 +11,10 @@ server {
         proxy_request_buffering off;
         proxy_read_timeout 60s;
         proxy_send_timeout 60s;
-        proxy_pass  http://www.netmanga.com:$PORT;
+        sendfile        on;
+        client_max_body_size 20M;
+        keepalive_timeout  0;
+        proxy_pass  http://127.0.0.1:$PORT;
         #include /etc/nginx/uwsgi_params;
         proxy_set_header HOST $host;
         proxy_set_header X-Real-IP $remote_addr;
