--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,6 +1,9 @@
 server {
     listen $PORT default_server;
     server_name netmanga.com www.netmanga.com;
+    sendfile on;
+    client_max_body_size 20M;
+    keepalive_timeout  0;
 
     location /static {
         alias /vol/static;
@@ -8,17 +11,15 @@ server {
 
     location / {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
-        proxy_request_buffering off;
-        proxy_read_timeout 60s;
-        proxy_send_timeout 60s;
-        sendfile        on;
-        client_max_body_size 20M;
-        keepalive_timeout  0;
-        proxy_pass  http://127.0.0.1:$PORT;
-        #include /etc/nginx/uwsgi_params;
-        proxy_set_header HOST $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        uwsgi_request_buffering off;
+        uwsgi_read_timeout 30s;
+        uwsgi_send_timeout 30s;
+        uwsgi_socket_keepalive 60s;
+        uwsgi_pass  netmanga.herkuapp.com:$PORT;
+        include /etc/nginx/uwsgi_params;
+        #proxy_set_header HOST $host;
+        #proxy_set_header X-Real-IP $remote_addr;
+        #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         #proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
         #proxy_pass http://0.0.0.0:$8080/;
     }
