--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,8 +1,10 @@
 [uwsgi]
-http-socket = :$(PORT)
+uwsgi-socket = :$(PORT)
 master = true
 protocol = http
 enable-threads = true
 module = netmanga_website.wsgi
 buffer-size = 32768
 preload = true
+harakiri = 60
+post-buffering = 128bit
