--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 uwsgi-socket = :$(PORT)
 master = true
-protocol = http
+protocol = uwsgi
 enable-threads = true
 module = netmanga_website.wsgi
 buffer-size = 32768
