change to http socket

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -14,7 +14,7 @@ server {
         uwsgi_request_buffering off;
         uwsgi_read_timeout 30s;
         uwsgi_send_timeout 30s;
-        uwsgi_socket_keepalive 60s;
+        uwsgi_socket_keepalive on;
         uwsgi_pass  netmanga.herkuapp.com:$PORT;
         include /etc/nginx/uwsgi_params;
         #proxy_set_header HOST $host;
