--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,26 +1,26 @@
 server {
     listen $PORT default_server;
     server_name netmanga.com www.netmanga.com;
-    sendfile on;
-    client_max_body_size 20M;
-    keepalive_timeout  0;
+    #sendfile on;
+    #client_max_body_size 20M;
+    #keepalive_timeout  0;
 
-    location /static {
-        alias /vol/static;
-    }
+    #location /static {
+    #    alias /vol/static;
+    #}
 
     location / {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
-        uwsgi_request_buffering off;
-        uwsgi_read_timeout 30s;
-        uwsgi_send_timeout 30s;
-        uwsgi_socket_keepalive on;
-        uwsgi_pass  netmanga.herkuapp.com:$PORT;
-        include /etc/nginx/uwsgi_params;
-        #proxy_set_header HOST $host;
-        #proxy_set_header X-Real-IP $remote_addr;
-        #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+        #uwsgi_request_buffering off;
+        #uwsgi_read_timeout 30s;
+        #uwsgi_send_timeout 30s;
+        #uwsgi_socket_keepalive ;
+        proxy_pass  http://netmanga.herkuapp.com:$PORT;
+        #include /etc/nginx/uwsgi_params;
+        proxy_set_header HOST $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
         #proxy_pass http://0.0.0.0:$8080/;
     }
 }
