--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-uwsgi-socket = :$(PORT)
+http-socket = :$(PORT)
 master = true
-protocol = uwsgi
+protocol = http
 enable-threads = true
 module = netmanga_website.wsgi
 buffer-size = 32768
