--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -5,9 +5,9 @@ server {
     #client_max_body_size 20M;
     #keepalive_timeout  0;
 
-    #location /static {
-    #    alias /vol/static;
-    #}
+    location /static {
+        alias /vol/static;
+    }
 
     location / {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
