--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-http-socket = :$(PORT)
+https-socket = :$(PORT)
 master = true
-protocol = http
+protocol = https
 enable-threads = true
 module = netmanga_website.wsgi
 buffer-size = 32768
