restart with http-socket

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,11 +1,5 @@
 [uwsgi]
-https-socket = :$(PORT)
+http-socket = :8000
 master = true
-protocol = https
 enable-threads = true
 module = netmanga_website.wsgi
-buffer-size = 32768
-preload = true
-harakiri = 60
-post-buffering = 128bit
-limit-post = 128bit
