--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,9 +1,5 @@
 server {
-    listen $PORT default_server;
-    server_name netmanga.com www.netmanga.com;
-    #sendfile on;
-    #client_max_body_size 20M;
-    #keepalive_timeout  0;
+    listen 8080;
 
     location /static {
         alias /vol/static;
@@ -11,11 +7,7 @@ server {
 
     location / {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
-        #uwsgi_request_buffering off;
-        #uwsgi_read_timeout 30s;
-        #uwsgi_send_timeout 30s;
-        #uwsgi_socket_keepalive ;
-        proxy_pass  http://netmanga.herkuapp.com:$PORT;
+        proxy_pass http://website:8000/;
         #include /etc/nginx/uwsgi_params;
         proxy_set_header X-Forwarded-Host $server_name;
         proxy_set_header HOST $host;
