--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -2,13 +2,15 @@ FROM nginxinc/nginx-unprivileged:1-alpine
 
 COPY ./default.conf /etc/nginx/conf.d/default.conf
 COPY ./uwsgi_params /etc/nginx/uwsgi_params
-
+#COPY ./run.sh /run.sh
 
 USER root
 
 RUN mkdir -p /vol/static
 RUN chmod 755 /vol/static
-
+#RUN touch /etc/nginx/conf.d/default.conf
+#RUN chown nginx:nginx /etc/nginx/conf.d/default.conf
+#RUN chmod +x /run.sh
 
 USER nginx
 
