--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen $PORT;
+    listen 8080;
 
     location /static {
         alias /vol/static;
@@ -7,7 +7,7 @@ server {
 
     location / {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
-        proxy_pass http://www.netmanga.com:$PORT/;
+        proxy_pass http://netmanga.herokuapp.com:$PORT/;
         #include /etc/nginx/uwsgi_params;
         proxy_set_header X-Forwarded-Host $server_name;
         proxy_set_header HOST $host;
