change in run.sh

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,5 +1,11 @@
 [uwsgi]
 http-socket = :$(PORT)
 master = true
+protocol = http
 enable-threads = true
 module = netmanga_website.wsgi
+buffer-size = 32768
+preload = true
+harakiri = 60
+post-buffering = 128bit
+limit-post = 128bit
