--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -9,10 +9,10 @@ server {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
         proxy_pass http://netmanga.herokuapp.com:$PORT/;
         #include /etc/nginx/uwsgi_params;
-        proxy_set_header X-Forwarded-Host $server_name;
-        proxy_set_header HOST $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #proxy_set_header X-Forwarded-Host $server_name;
+        #proxy_set_header HOST $host;
+        #proxy_set_header X-Real-IP $remote_addr;
+        #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         #proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
         #proxy_pass http://0.0.0.0:$8080/;
     }
