--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -7,7 +7,7 @@ server {
 
     location / {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
-        proxy_pass http://netmanga.herokuapp.com:$PORT/;
+        proxy_pass http://netmanga.herokuapp.com:$PORT;
         #include /etc/nginx/uwsgi_params;
         #proxy_set_header X-Forwarded-Host $server_name;
         #proxy_set_header HOST $host;
