dont autofill Contactform when user is not logged in

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,6 +1,9 @@
 server {
-    listen 8080;
+    listen 8080 default_server;
 
+    server_name _;
+
+    return 301 https://$host$request_uri;
     location /static {
         alias /vol/static;
     }
