--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,9 +1,6 @@
 server {
-    listen 8080 default_server;
+    listen 8080;
 
-    server_name _;
-
-    return 301 https://$host$request_uri;
     location /static {
         alias /vol/static;
     }
