--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -7,6 +7,8 @@ server {
 
     location / {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
+        add_header X-Served-By "My Servlet Handler";
+        add_header Strict-Transport_security "max-age=31536000; includeSubdomains" always;
         proxy_pass https://www.netmanga.com:$PORT/;
         #include /etc/nginx/uwsgi_params;
         proxy_set_header X-Forwarded-Host $server_name;
