--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,8 +1,8 @@
 server {
     listen 8080;
-    #listen 443 ssl;
+    listen 443 ssl;
 
-    #add_header Strict-Transport_security "max-age=31536000; includeSubdomains" always;
+    add_header Strict-Transport-security "max-age=31536000; includeSubdomains" always;
 
     location /static {
         alias /vol/static;
