Stict-Transport-Security for HTTP-Header

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -7,7 +7,7 @@ server {
 
     location / {
         #more_set_headers 'X-Request-Id: $http_x_request_id';
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         proxy_pass https://www.netmanga.com:$PORT/;
         #include /etc/nginx/uwsgi_params;
         proxy_set_header X-Forwarded-Host $server_name;
